# build-web-scraper-python

./: README.md  crawl.py  csv_report.py  main.py  pyproject.toml  report.csv
