[project]
name = "build-web-scraper-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp==3.12.12",
    "aiosignal>=1.4.0",
    "beautifulsoup4==4.13.4",
    "requests==2.32.4",
]
